--- a/style.css
+++ b/style.css
@@ -172,8 +172,18 @@ span.onsale {
 	margin-left: 0;
 }
 
-.slide-products .col-pro-slider {
-	padding-right: 0;
+@media all and (min-width: 991px) {
+	.slide-products .flickity-viewport {
+		width: calc( 100% + 20px) !important;
+	}
+	.slide-products .flickity-viewport .row-xsmall > .col {
+		margin-bottom: 25px;
+		padding: 0px 10px;
+	}
+}
+
+.slide-products .flickity-prev-next-button {
+	top: 31%;
 }
 
 .slide-products .col-pro-slider span.price {
@@ -192,8 +202,8 @@ span.onsale {
 	padding: 10px;
 }
 
-.slide-products .col-pro-slider-2 {
-	padding-left: 5px;
+.slide-products .col-pro-slider-2 > .col-inner > .row {
+	height: 100%;
 }
 
 .slide-products .col-pro-slider-2 .box-text.text-left {
